# Tara-Engine

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Engine.vcxproj  README.md  Tara.sln  ZERO_CHECK.vcxproj  cmake_install.cmake  cpp.hint  imgui.ini  log.txt  style.setting
Core/: Core.vcxproj  Core.vcxproj.filters  resource.h
Core/include/: asset.h  config.h  ecomponent.h  einput.h  emath.h  engine.h  eobject.h  ewindow.h  framebuffer.h  gui.h  logger.h  material.h  mesh.h  renderer.h  scene.h  shader.h  texture.h  utility.h  world.h
Core/include/buildin/: buildin.h
Core/include/components/: Physics.h  allcomponents.h  camera.h  character_control.h  collision.h  component.h  free_camera.h  light.h  mesh_renderer.h  transformation.h
Core/include/gui/: gui_base.h  gui_container.h  gui_flags.h  gui_lowlevel.h  gui_style.h
Core/preprocessor/: Debug.txt
Core/src/: asset.cpp  ecomponent.cpp  einput.cpp  emath.cpp  eobject.cpp  ewindow.cpp  framebuffer.cpp  gui.cpp  logger.cpp  material.cpp  mesh.cpp  renderer.cpp  scene.cpp  shader.cpp  texture.cpp  utility.cpp  world.cpp
Core/src/buildin/: buildin_mesh.cpp  buildin_shader.cpp  buildin_texture.cpp
Core/src/components/: camera.cpp  character_control.cpp  collision.cpp  component.cpp  free_camera.cpp  mesh_renderer.cpp  transformation.cpp
Core/src/gui/: gui_container.cpp  gui_flags.cpp  gui_lowlevel.cpp  gui_style.cpp
Demo/: Demo.cpp  Demo.vcxproj  Demo.vcxproj.filters  Resource.resx  imgui.ini  log.txt
Demo/Resources/: DefaultPostProcess.frag  DefaultPostProcess.vert  GGX.frag  Lambert.vert  PureColor.frag  TextureSurface.frag
Demo/temp/: mesh_import_temp
PixalArtPainter/: PixalArtPainter.cpp  PixalArtPainter.filters  PixalArtPainter.vcxproj  PixalArtPainter.vcxproj.filters  imgui.ini  panels.h  windowmanager.cpp  windowmanager.h
cmake/: buildall.cmake
engine/: engine.cpp
engine/app/: app.cpp  app.h
engine/app/panel/: allpanel.h  application_setting_win.cpp  application_setting_win.h  asset_win.cpp  asset_win.h  code_editor_win.cpp  console_win.cpp  console_win.h  export_win.cpp  file_explorer_win.cpp  file_explorer_win.h  (+11 more)
engine/editor/: editor.cpp  editor.h  editor_base.h  editor_config.h  editor_container.cpp  editor_container.h  editor_flags.h  editor_lowlevel.cpp  editor_lowlevel.h  editor_setting.cpp  editor_setting.h  editor_style.cpp  editor_style.h
engine/engine/: tara.cpp
engine/extension/: tara_extension.h
lib/: BuildAllLibrary.txt  DownloadAllLibrary.bat
resources/: Manifest.json
resources/material/: DefaultSky.json
resources/shader/: Blinn.frag  Color.frag  Color.vert  DefaultPostProcess.frag  DefaultPostProcess.vert  DirectionalShadow.frag  DirectionalShadow.vert  Error.frag  Error.vert  GGX.frag  GGX.vert  Lambert.frag  Lambert.vert  Normal.frag  Normal.vert  Panorama.vert  PointShadow.frag  PointShadow.vert  Reflection.frag  Reflection.vert  Sky.frag  Sky.vert  Texture.frag  Texture.vert
resources/template/: templates.json
src/app/: app.cpp  main.cpp
src/app/creator/: CMakeLists.txt  creator.cpp  creator.h  main.cpp
src/app/creator/window/: app_window.cpp  app_window.h
src/app/panels/asset/: CMakeLists.txt  asset_win.cpp  asset_win.h
src/app/panels/code_editor/: CMakeLists.txt  code_editor_win.h
src/app/panels/console/: CMakeLists.txt  console_win.cpp  console_win.h
src/app/panels/explorer/: CMakeLists.txt  file_explorer_win.cpp  file_explorer_win.h
src/app/panels/export/: CMakeLists.txt  export_win.h
src/app/panels/framebuffer_view/: CMakeLists.txt  framebuffer_viewer_win.cpp  framebuffer_viewer_win.h
src/app/panels/helper/: CMakeLists.txt  helper_win.cpp  helper_win.h
src/app/panels/hierarchy/: CMakeLists.txt  hierarchy_win.cpp  hierarchy_win.h
src/app/panels/node/: CMakeLists.txt  node_editor_win.cpp  node_editor_win.h
src/app/panels/project_creation/: CMakeLists.txt  project_creation_win.cpp  project_creation_win.h  project_template.h
src/app/panels/property/: CMakeLists.txt  properties_win.cpp  properties_win.h
src/app/panels/scene/: CMakeLists.txt  scene_viewer_win.cpp  scene_viewer_win.h
src/app/panels/setting/: CMakeLists.txt  setting_win.cpp  setting_win.h
src/app/panels/timeline/: CMakeLists.txt  timeline_win.h
src/core/appcore/: CMakeLists.txt  global_menubar.h  global_panels.cpp  global_panels.h  global_states.cpp  global_states.h
src/core/editor/: CMakeLists.txt  editor_base.h  editor_flags.cpp  editor_lowlevel.cpp  editor_lowlevel.h
src/core/editor/asset/: regular_file.cpp
src/core/editor/component/: audio_listener_editor.cpp  audio_listener_editor.h  audio_source_editor.h  camera_editor.cpp  camera_editor.h  environment_editor.cpp  environment_editor.h
src/core/editor/project/: project.h
src/core/engine/: CMakeLists.txt  tara.cpp
src/core/engine/component/: audio_listener.cpp  audio_listener.h  audio_source.h  component.h  free_camera.cpp  light.h  transformation.h
src/core/engine/core/: asset.cpp  asset.h  base.h  emath.cpp  event.cpp  event.h  logger.cpp  logger.h  utility.cpp  utility.h
src/core/engine/core/buildin/: buildin_manager.cpp  buildin_manager.h
src/core/engine/core/framebuffer/: framebuffer.cpp  framebuffer.h
src/core/engine/core/interface/: asset.h  event.h
src/core/engine/core/material/: material.cpp  material.h
src/core/engine/core/renderer/: renderer.cpp  renderer.h  renderer_batch.h  renderer_command.h  renderer_control.h  renderer_debug.h  renderer_state.h
src/core/engine/core/scene_object/: scene_object.cpp  scene_object.h
src/core/engine/core/shader/: shader.cpp  shader.h  shader_enum.h  shader_map.h  shader_struct.h
src/core/engine/core/window/: ewindow.cpp
src/core/engine/extension/: tara_extension.cpp
src/core/engine/system/: audio_listener_system.h  audio_source_system.cpp  audio_source_system.h  camera_system.cpp  collision_system.h  system.cpp
src/editor/: editor.cpp  editor.h  editor_container.cpp  editor_container.h  editor_flags.h  editor_lowlevel.cpp  editor_style.h
src/engine/: tara.cpp  tara.h
uml/: pipeline.drawio  workflow.drawio
(+170 files in other folders)
