file(GLOB_RECURSE Creator_Files 
	"${ENGINE_DIR}/app/creator/*.h"
	"${ENGINE_DIR}/app/creator/*.hpp"
	"${ENGINE_DIR}/app/creator/*.c"
	"${ENGINE_DIR}/app/creator/*.cpp")
	
add_executable(Creator ${Creator_Files})
source_group(TREE "${ENGINE_DIR}/app/creator" FILES ${Creator_Files})
set_target_properties(Creator PROPERTIES LINKER_LANGUAGE CXX)
set_target_properties(Creator PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${BIN_DIR}")
set_target_properties(Creator PROPERTIES LIBRARY_OUTPUT_DIRECTORY_DEBUG "${BIN_DIR}")
set_target_properties(Creator PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${BIN_DIR}")
set_target_properties(Creator PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${BIN_DIR}")
set_target_properties(Creator PROPERTIES LIBRARY_OUTPUT_DIRECTORY_RELEASE "${BIN_DIR}")
set_target_properties(Creator PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${BIN_DIR}")
target_compile_definitions(Creator PUBLIC TARA_APP_API=DLLIMPORT)
target_compile_definitions(Creator PUBLIC TARA_EDITOR_API=DLLIMPORT)
target_compile_definitions(Creator PUBLIC TARA_EDITOR_API=DLLIMPORT)

target_include_directories(Creator PUBLIC "${ENGINE_DIR}/core")
target_include_directories(Creator PUBLIC "${Root}/lib/glm")
target_include_directories(Creator PUBLIC "${Root}/lib/json/include")
target_include_directories(Creator PUBLIC "${Root}/lib/uuid4")
target_include_directories(Creator PUBLIC "${Root}/src/core/appcore")
target_include_directories(Creator PUBLIC "${Root}/src/core/editor")
target_include_directories(Creator PUBLIC "${Root}/src/core/engine")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/asset")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/code_editor")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/console")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/debug")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/explorer")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/export")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/framebuffer_view")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/helper")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/hierarchy")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/node")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/project_creation")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/property")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/scene")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/setting")
target_include_directories(Creator PUBLIC "${Root}/src/app/panels/timeline")

target_link_directories(Creator PUBLIC "${BIN_DIR}")

target_link_libraries(Creator PUBLIC "Engine.lib")
target_link_libraries(Creator PUBLIC "Editor.lib")
target_link_libraries(Creator PUBLIC "AppCore.lib")
target_link_libraries(Creator PUBLIC "Creator_Asset.lib")
target_link_libraries(Creator PUBLIC "Creator_CodeEditor.lib")
target_link_libraries(Creator PUBLIC "Creator_Console.lib")
target_link_libraries(Creator PUBLIC "Creator_Debug.lib")
target_link_libraries(Creator PUBLIC "Creator_Export.lib")
target_link_libraries(Creator PUBLIC "Creator_FileExplorer.lib")
target_link_libraries(Creator PUBLIC "Creator_FramebufferView.lib")
target_link_libraries(Creator PUBLIC "Creator_Helper.lib")
target_link_libraries(Creator PUBLIC "Creator_Hierarchy.lib")
target_link_libraries(Creator PUBLIC "Creator_Node.lib")
target_link_libraries(Creator PUBLIC "Creator_ProjectCreation.lib")
target_link_libraries(Creator PUBLIC "Creator_Property.lib")
target_link_libraries(Creator PUBLIC "Creator_Scene.lib")
target_link_libraries(Creator PUBLIC "Creator_Setting.lib")
target_link_libraries(Creator PUBLIC "Creator_Timeline.lib")

set_target_properties(Creator PROPERTIES FOLDER Application)
